# tf_example

./: .gitattributes  CMakeLists.txt  main.cc
data/: .gitattributes
tf_lib/lib/: .gitattributes  libtensorflow_cc.so.2  libtensorflow_framework.so.2
